Using new base64 calculation